fixed line break on text in the button

--- a/src/app/styles/components/hero.css
+++ b/src/app/styles/components/hero.css
@@ -137,7 +137,7 @@ section.hero div.hero-image{
     }
     section.hero div.hero-content div.call-to-action{
         margin: 250px auto 0 auto;
-        padding: 15px 66px;
+        padding: 15px 0;
     }
     section.hero div.hero-content div.call-to-action button{
         width: 100%;
